[package]
name = "lkgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
livekit = { path = "../client-sdk-native/livekit" }
anyhow = "1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10"
